--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A microservice to retrieve match data",
   "main": "index.js",
   "scripts": {
-    "test": "node index.js"
+    "test": "./node_modules/.bin/mocha --reporter spec"
   },
   "repository": {
     "type": "git",
@@ -22,5 +22,9 @@
     "request-promise": "^4.2.2",
     "sequelize": "^4.22.12",
     "winston": "^2.4.0"
+  },
+  "devDependencies": {
+    "chai": "^4.1.2",
+    "mocha": "^4.0.1"
   }
 }
